--- a/17-tic_tac_toe_game/css/style.css
+++ b/17-tic_tac_toe_game/css/style.css
@@ -174,6 +174,10 @@ body {
     opacity: 1;
 }
 
+.choice-button:disabled .hover-icon {
+    opacity: 0;
+}
+
 .current-turn-wrapper {
     padding: 0.75rem 0;
 }
