--- a/17-tic_tac_toe_game/css/utility.css
+++ b/17-tic_tac_toe_game/css/utility.css
@@ -42,7 +42,13 @@
 }
 
 .flex-gap {
-    gap: 1rem;
+    gap: 0.75rem;
+}
+
+@media (min-width: 48rem) {
+    .flex-gap {
+        gap: 1.5rem;
+    }
 }
 
 .flex-direction-column {
