--- a/17-tic_tac_toe_game/css/utility.css
+++ b/17-tic_tac_toe_game/css/utility.css
@@ -127,6 +127,14 @@
     color: var(--dark-navy);
 }
 
+.text-color-light-yellow {
+    color: var(--light-yellow);
+}
+
+.text-color-light-blue {
+    color: var(--light-blue);
+}
+
 .uppercase {
     text-transform: uppercase;
 }
