--- a/17-tic_tac_toe_game/css/style.css
+++ b/17-tic_tac_toe_game/css/style.css
@@ -66,6 +66,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 /* Choice Selection Section */
@@ -251,12 +252,27 @@ body {
 /* Game Finished Section*/
 .game-finished-section {
     display: none;
-}
-
-.game-finished .game-section {
-    display: none;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 999;
+    padding: 1.5rem 0;
 }
 
 .game-finished .game-finished-section {
     display: block;
 }
+
+.overlay {
+    position: absolute;
+    display: block;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.overlay.hidden {
+    display: none;
+}
+
