--- a/17-tic_tac_toe_game/css/utility.css
+++ b/17-tic_tac_toe_game/css/utility.css
@@ -29,6 +29,10 @@
     place-items: center;
 }
 
+.grid-gap {
+    gap: 1rem;
+}
+
 .grid-2-columns {
     grid-template-columns: repeat(2, 1fr);
 }
