--- a/17-tic_tac_toe_game/css/style.css
+++ b/17-tic_tac_toe_game/css/style.css
@@ -219,6 +219,18 @@ body {
     transition: all 0.3s ease;
 }
 
+.game-overlay {
+    display: block;
+    position: absolute;
+    inset: 0;
+    background-color: transparent;
+    z-index: 999;
+}
+
+.game-overlay.hidden {
+    display: none;
+}
+
 /* Score */
 .score-box {
     padding: 1rem;
