--- a/17-tic_tac_toe_game/css/utility.css
+++ b/17-tic_tac_toe_game/css/utility.css
@@ -30,7 +30,7 @@
 }
 
 .grid-gap {
-    gap: 1.25rem;
+    gap: 1rem;
 }
 
 .grid-2-columns {
@@ -52,6 +52,10 @@
 @media (min-width: 48rem) {
     .flex-gap {
         gap: 1.5rem;
+    }
+
+    .grid-gap {
+        gap: 1.25rem;
     }
 }
 
