--- a/12-rock_paper_scissors/css/style.css
+++ b/12-rock_paper_scissors/css/style.css
@@ -215,6 +215,10 @@ body {
     transform: scale(1.35);
 }
 
+.game-finished .logo-container:hover::after {
+    transform: scale(1);
+}
+
 /* Individual container*/
 .paper-container {
     background: var(--paper-gradient);
@@ -339,6 +343,21 @@ body {
     max-width: 60rem;
     margin: 0 auto;
     text-transform: uppercase;
+}
+
+.user-pick-container,
+.computer-pick-container {
+    position: relative;
+}
+
+.win-background {
+    position: absolute;
+    inset: 0;
+    background-color: rgba(255, 255, 255, 0.2);
+    z-index: -1;
+    border-radius: 50%;
+    transform: scale(1.25);
+    display: none;
 }
 
 .user-pick-box,
