--- a/18_order-summary-component/scss/base/_colors.scss
+++ b/18_order-summary-component/scss/base/_colors.scss
@@ -1,47 +1,12 @@
-// Components
-.container {
-  max-width: 30rem;
+:root {
+  --pale-blue: hsl(225, 100%, 94%);
+  --bright-blue: hsl(245, 75%, 52%);
+  --very-pale-blue: hsl(225, 100%, 98%);
+  --desaturated-blue: hsl(224, 23%, 55%);
+  --dark-blue: hsl(223, 47%, 23%);
 }
 
-// Layouts
-.flex {
-  display: flex;
-}
-
-.flex-direction-column {
-  flex-direction: column;
-}
-
-.flex-space-between {
-  justify-content: space-between;
-}
-
-.flex-justify-center {
-  justify-content: center;
-}
-
-.flex-align-center {
-  align-items: center;
-}
-
-// Font sizes
-.font-size-400 {
-  font-size: var(--font-size-400);
-}
-
-.font-size-300 {
-  font-size: var(--font-size-300);
-}
-
-.font-size-200 {
-  font-size: var(--font-size-200);
-}
-
-.font-size-100 {
-  font-size: var(--font-size-100);
-}
-
-// Background
+// Background Color
 .background-pale-blue {
   background-color: var(--pale-blue);
 }
@@ -82,5 +47,3 @@
 .text-color-dark-blue {
   color: var(--dark-blue);
 }
-
-
