--- a/18_order-summary-component/scss/base/_typography.scss
+++ b/18_order-summary-component/scss/base/_typography.scss
@@ -1,19 +1,10 @@
 :root {
-  // Typography
   --font-family-red-hat: 'Red Hat Display', sans-serif;
 
-  // Font sizes
   --font-size-400: 1.375rem;
   --font-size-300: 0.9375rem;
   --font-size-200: 0.9375rem;
   --font-size-100: 0.8125rem;
-
-  // Colors
-  --pale-blue: hsl(225, 100%, 94%);
-  --bright-blue: hsl(245, 75%, 52%);
-  --very-pale-blue: hsl(225, 100%, 98%);
-  --desaturated-blue: hsl(224, 23%, 55%);
-  --dark-blue: hsl(223, 47%, 23%);
 }
 
 @media (min-width: 48rem) {
@@ -23,4 +14,20 @@
     --font-size-200: 0.9375rem;
     --font-size-100: 0.875rem;
   }
+}
+
+.font-size-400 {
+  font-size: var(--font-size-400);
+}
+
+.font-size-300 {
+  font-size: var(--font-size-300);
+}
+
+.font-size-200 {
+  font-size: var(--font-size-200);
+}
+
+.font-size-100 {
+  font-size: var(--font-size-100);
 }
