--- a/18_order-summary-component/css/main.css
+++ b/18_order-summary-component/css/main.css
@@ -4,6 +4,11 @@
   --font-size-300: 0.9375rem;
   --font-size-200: 0.9375rem;
   --font-size-100: 0.8125rem;
+  --pale-blue: hsl(225, 100%, 94%);
+  --bright-blue: hsl(245, 75%, 52%);
+  --very-pale-blue: hsl(225, 100%, 98%);
+  --desaturated-blue: hsl(224, 23%, 55%);
+  --dark-blue: hsl(223, 47%, 23%);
 }
 
 @media (min-width: 48rem) {
@@ -14,111 +19,42 @@
     --font-size-100: 0.875rem;
   }
 }
-.font-size-400 {
-  font-size: var(--font-size-400);
-}
-
-.font-size-300 {
-  font-size: var(--font-size-300);
-}
-
-.font-size-200 {
-  font-size: var(--font-size-200);
-}
-
-.font-size-100 {
-  font-size: var(--font-size-100);
-}
-
-:root {
-  --pale-blue: hsl(225, 100%, 94%);
-  --bright-blue: hsl(245, 75%, 52%);
-  --very-pale-blue: hsl(225, 100%, 98%);
-  --desaturated-blue: hsl(224, 23%, 55%);
-  --dark-blue: hsl(223, 47%, 23%);
-}
-
-.background-pale-blue {
-  background-color: var(--pale-blue);
-}
-
-.background-bright-blue {
-  background-color: var(--bright-blue);
-}
-
-.background-very-pale-blue {
-  background-color: var(--very-pale-blue);
-}
-
-.background-desaturated-blue {
-  background-color: var(--desaturated-blue);
-}
-
-.background-dark-blue {
-  background-color: var(--dark-blue);
-}
-
-.text-color-pale-blue {
-  color: var(--pale-blue);
-}
-
-.text-color-bright-blue {
-  color: var(--bright-blue);
-}
-
-.text-color-very-pale-blue {
-  color: var(--very-pale-blue);
-}
-
-.text-color-desaturated-blue {
-  color: var(--desaturated-blue);
-}
-
-.text-color-dark-blue {
-  color: var(--dark-blue);
-}
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role=list],
-ol[role=list] {
-  list-style: none;
-}
-
-/* Set core root defaults */
 html:focus-within {
   scroll-behavior: smooth;
 }
 
-/* Set core body defaults */
 body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  font-family: var(--font-family-red-hat);
+  background-color: var(--very-pale-blue);
+  background-image: url("../../images/pattern-background-mobile.svg");
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-  text-decoration-skip-ink: auto;
+@media (min-width: 48rem) {
+  body {
+    background-image: url("../../images/pattern-background-desktop.svg");
+  }
 }
-
-/* Make images easier to work with */
-img,
-picture {
+img {
   max-width: 100%;
   display: block;
 }
 
-/* Inherit fonts for inputs and buttons */
-input,
-button,
-textarea,
-select {
+button {
   font: inherit;
 }
 
@@ -137,38 +73,47 @@ select {
   }
 }
 .container {
-  max-width: 30rem;
-}
-
-.flex {
-  display: flex;
-}
-
-.flex-direction-column {
-  flex-direction: column;
-}
-
-.flex-space-between {
-  justify-content: space-between;
-}
-
-.flex-justify-center {
-  justify-content: center;
-}
-
-.flex-align-center {
-  align-items: center;
+  max-width: 25rem;
 }
 
 .card {
   background-color: white;
+  text-align: center;
+  box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.5);
+  border-radius: 0.75rem;
+  overflow: hidden;
 }
-body {
+.card__text-content {
+  padding: 2rem;
+}
+.card__heading {
+  font-size: var(--font-size-400);
+  color: var(--dark-blue);
+}
+.card__text {
+  font-size: var(--font-size-200);
+  color: var(--desaturated-blue);
+}
+.card__plan {
   display: flex;
-  justify-content: center;
+  gap: 1rem;
   align-items: center;
-  background-image: url("../images/pattern-background-mobile.svg");
-  background-size: cover;
+}
+.card__plan-btn {
+  margin-left: auto;
+}
+.card__payment-btn {
+  display: block;
+  width: 100%;
+  background-color: var(--bright-blue);
+  color: var(--very-pale-blue);
+  border: none;
+}
+.card__cancel-btn {
+  display: block;
+  width: 100%;
+  background-color: transparent;
+  border: none;
 }
 
 /*# sourceMappingURL=main.css.map */
