--- a/18_order-summary-component/css/main.css
+++ b/18_order-summary-component/css/main.css
@@ -4,8 +4,12 @@
   --font-size-300: 0.9375rem;
   --font-size-200: 0.9375rem;
   --font-size-100: 0.8125rem;
+  --font-weight-medium: 500;
+  --font-weight-bold: 700;
+  --font-weight-extra-bold: 900;
   --pale-blue: hsl(225, 100%, 94%);
   --bright-blue: hsl(245, 75%, 52%);
+  --raw-bright-blue: 245, 75%, 52%;
   --very-pale-blue: hsl(225, 100%, 98%);
   --desaturated-blue: hsl(224, 23%, 55%);
   --dark-blue: hsl(223, 47%, 23%);
@@ -34,7 +38,7 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   font-family: var(--font-family-red-hat);
-  background-color: var(--very-pale-blue);
+  background-color: var(--pale-blue);
   background-image: url("../../images/pattern-background-mobile.svg");
   background-position: center top;
   background-repeat: no-repeat;
@@ -73,47 +77,110 @@ button {
   }
 }
 .container {
-  max-width: 25rem;
+  max-width: 23rem;
 }
 
+.flex {
+  display: flex;
+}
+
+.flex-align-center {
+  align-items: center;
+}
+
+.flex-gap {
+  gap: 0.5rem;
+}
+
+@media (min-width: 48rem) {
+  .flex-gap {
+    gap: 1rem;
+  }
+}
 .card {
   background-color: white;
   text-align: center;
   box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.5);
   border-radius: 0.75rem;
   overflow: hidden;
+  margin-inline: 1rem;
 }
 .card__text-content {
-  padding: 2rem;
+  padding: 2rem 1rem;
+}
+.card__text-content > * + * {
+  margin-top: 1rem;
 }
 .card__heading {
   font-size: var(--font-size-400);
   color: var(--dark-blue);
+  font-weight: var(--font-weight-extra-bold);
 }
 .card__text {
-  font-size: var(--font-size-200);
+  font-size: var(--font-size-300);
   color: var(--desaturated-blue);
+  font-weight: var(--font-weight-medium);
 }
 .card__plan {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
+  padding: 1rem 0.5rem;
+  background-color: var(--very-pale-blue);
+  border-radius: 0.5rem;
+  margin: 1.75rem 0;
+}
+.card__plan-heading {
+  font-size: var(--font-size-300);
+  font-weight: var(--font-weight-extra-bold);
+  color: var(--dark-blue);
+}
+.card__plan-price {
+  font-size: var(--font-size-300);
+  font-weight: var(--font-weight-medium);
+  color: var(--desaturated-blue);
 }
 .card__plan-btn {
   margin-left: auto;
+  font-size: var(--font-size-100);
+  font-weight: var(--font-weight-bold);
+  color: var(--bright-blue);
+  transition: all 0.3s ease;
+}
+.card__plan-btn:hover, .card__plan-btn:active {
+  color: hsl(var(--raw-bright-blue), 0.7);
+}
+.card__payment-btn, .card__cancel-btn {
+  display: block;
+  width: 100%;
+  font-weight: var(--font-weight-bold);
+  font-size: var(--font-size-200);
+  border: none;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
 }
 .card__payment-btn {
-  display: block;
-  width: 100%;
   background-color: var(--bright-blue);
   color: var(--very-pale-blue);
-  border: none;
+  padding: 0.75rem 1rem;
+  box-shadow: 3px 2px 14px hsl(var(--raw-bright-blue), 0.7);
+}
+.card__payment-btn:hover {
+  background-color: hsl(var(--raw-bright-blue), 0.7);
 }
 .card__cancel-btn {
-  display: block;
-  width: 100%;
   background-color: transparent;
-  border: none;
+  padding: 0.25rem 1rem;
+  color: var(--desaturated-blue);
+}
+.card__cancel-btn:hover {
+  color: var(--dark-blue);
+}
+@media (min-width: 48rem) {
+  .card__text-content {
+    padding: 2rem 2.5rem;
+  }
+  .card__plan {
+    padding: 1rem 1rem;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
