--- a/18_order-summary-component/scss/base/_reset.scss
+++ b/18_order-summary-component/scss/base/_reset.scss
@@ -14,7 +14,7 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   font-family: var(--font-family-red-hat);
-  background-color: var(--very-pale-blue);
+  background-color: var(--pale-blue);
   background-image: url('../../images/pattern-background-mobile.svg');
   background-position: center top;
   background-repeat: no-repeat;
