--- a/18_order-summary-component/css/main.css
+++ b/18_order-summary-component/css/main.css
@@ -105,8 +105,11 @@ button {
   overflow: hidden;
   margin-inline: 1rem;
 }
-.card__text-content {
-  padding: 2rem 1rem;
+.card__content {
+  padding: 1rem 1rem;
+}
+.card__content > * + * {
+  margin-top: 1.5rem;
 }
 .card__text-content > * + * {
   margin-top: 1rem;
@@ -175,8 +178,11 @@ button {
   color: var(--dark-blue);
 }
 @media (min-width: 48rem) {
+  .card__content {
+    padding: 2rem 1.5rem;
+  }
   .card__text-content {
-    padding: 2rem 2.5rem;
+    padding: 0 1.5rem;
   }
   .card__plan {
     padding: 1rem 1rem;
