--- a/18_order-summary-component/scss/components/_card.scss
+++ b/18_order-summary-component/scss/components/_card.scss
@@ -95,7 +95,7 @@
     color: var(--dark-blue);
   }
 
-  @media (min-width: 48rem) {
+  @media (min-width: 48em) {
     &__content {
       padding: 2rem 1.5rem;
     }
